tests/invalid/type/prototype_descriptor_as_expression.pts
prototype Point {
  int x;
}

function main() : void {
  Point p = Point;
}
